[package]
name = "akatsuki-pp"
version = "0.5.0"
authors = ["MaxOhn <ohn.m@hotmail.de>", "tsunyoku <tsunyoku@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/tsunyoku/akatsuki-pp"
description = "osu! difficulty and pp calculation for all modes"
keywords = ["osu", "pp", "stars", "async"]

[features]
default = ["osu", "taiko", "fruits", "mania"]

# game modes
osu = ["sliders"]
taiko = []
fruits = ["sliders"]
mania = []

# async version
async_std = ["async-std"]
async_tokio = ["tokio"]

# auxiliary, no need to set yourself
sliders = []

[dependencies.async-std]
version = "1.9"
optional = true
default-features = false
features = ["async-io", "std"]

[dependencies.tokio]
version = "1.2"
optional = true
default-features = false
features = ["fs", "io-util"]

[dev-dependencies.tokio]
version = "1.2"
default-features = false
features = ["fs", "rt"]

[dev-dependencies.async-std]
version = "1.9"
default-features = true
